--- a/Racing.cbp
+++ b/Racing.cbp
@@ -38,6 +38,8 @@
 		<Unit filename="Driver.h" />
 		<Unit filename="Functions.cpp" />
 		<Unit filename="Functions.h" />
+		<Unit filename="Gameplay.cpp" />
+		<Unit filename="Gameplay.h" />
 		<Unit filename="Race.cpp" />
 		<Unit filename="Race.h" />
 		<Unit filename="Vehicle.cpp" />
